events page added

--- a/Events/event.html
+++ b/Events/event.html
@@ -4,9 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Events</title>
+
+    <link rel="stylesheet" href="events.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="stars.css" />
 </head>
 <body>
-    <h1>Events- Jishnu's Page</h1>
+    <div id="stars"></div>
+    <header class="main-header">
+        <h1>EVENTS</h1>
+
+    </header>
+
+    <main class="container">
+        <section class="card" data-aos="fade-right">
+            <img src="https://i.ibb.co/VvC0vpN/paint-1.png" alt="" />
+            <div>
+                <h3>Event One</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
+                    enim laudantium, animi veniam libero eveniet culpa unde perferendis
+                    illo fugit corporis, voluptatibus totam dolorum, maiores magnam
+                    officia. Ab, delectus.
+                </p>
+                <a href="#" class="btn">Register</a>
+            </div>
+        </section>
+
+        <section class="card" data-aos="fade-left">
+            <img src="https://i.ibb.co/VvC0vpN/paint-1.png" alt="" />
+            <div>
+                <h3>Event Two</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
+                    enim laudantium, animi veniam libero eveniet culpa unde perferendis
+                    illo fugit corporis, voluptatibus totam dolorum, maiores magnam
+                    officia. Ab, delectus.
+                </p>
+                <a href="#" class="btn">Register</a>
+            </div>
+        </section>
+
+        <section class="card" data-aos="fade-right">
+            <img src="https://i.ibb.co/VvC0vpN/paint-1.png" alt="" />
+            <div>
+                <h3>Event Three</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
+                    enim laudantium, animi veniam libero eveniet culpa unde perferendis
+                    illo fugit corporis, voluptatibus totam dolorum, maiores magnam
+                    officia. Ab, delectus.
+                </p>
+                <a href="#" class="btn">Register</a>
+            </div>
+        </section>
+
+        <section class="card" data-aos="fade-left">
+            <img src="https://i.ibb.co/VvC0vpN/paint-1.png" alt="" />
+            <div>
+                <h3>Event Four</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
+                    enim laudantium, animi veniam libero eveniet culpa unde perferendis
+                    illo fugit corporis, voluptatibus totam dolorum, maiores magnam
+                    officia. Ab, delectus.
+                </p>
+                <a href="#" class="btn">Register</a>
+            </div>
+        </section>
+
+        <section class="card" data-aos="fade-right">
+            <img src="https://i.ibb.co/VvC0vpN/paint-1.png" alt="" />
+            <div>
+                <h3>Event Five</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
+                    enim laudantium, animi veniam libero eveniet culpa unde perferendis
+                    illo fugit corporis, voluptatibus totam dolorum, maiores magnam
+                    officia. Ab, delectus.
+                </p>
+                <a href="#" class="btn">Register</a>
+            </div>
+        </section>
+    </main>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
 </body>
 </html>
