page loader animation

--- a/Events/event.html
+++ b/Events/event.html
@@ -9,8 +9,14 @@
     <link rel="stylesheet" href="events.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="stars.css" />
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+        <!-- loader  -->
+        <div class="loader-wrapper">
+            <span class="loader"><span class="loader-inner"></span></span>
+        </div>
+
     <div id="stars"></div>
     <header class="main-header">
         <h1>EVENTS</h1>
@@ -88,6 +94,7 @@
             </div>
         </section>
     </main>
+    <script type="text/javascript" src="../Js/script.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
