added footer and core section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Barlow:400,500,700|Vidaloka" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 	<link rel="stylesheet" type="text/css" href="base.css" />
     <!-- CSS  -->
     <link rel="stylesheet" href="style.css">
@@ -126,7 +127,7 @@
         </div>
     </div>
 
-    <div class="gap-150p"></div>
+    <div class="gap-1"></div>
     <div class="panel" data-color="dark">
         <div class="time-machine-container">
             <div class="time-machine-header">
@@ -191,21 +192,58 @@
             <div class="gap-50p"></div>
             <div class="button-container">
                 <h1 class="ml12">Explore more Events</h1>
-                <button class="explore">
-                    <a href="./Events/event.html"> Initiate Hyperdrive</a>  
+                <button class="explore" onclick="location.href='./Events/event.html'" type="button">
+                    Initiate Hyperdrive  
                 </button>
             </div>
         </div>
     </div>
-    <!-- <div class="panel" data-color="moonlight">
-        <div data-aos="fade-in" 
-        data-aos-offset="200"
-        data-aos-delay="50"
-        data-aos-duration="1000"
-        data-aos-easing="ease-in-out">
-            <h1 class="sample">Test-3</h1>
+
+    <div class="gap-1"></div>
+
+    <div class="panel" data-color="indigo">
+        <div class="core-members">
+            <div class="perspective-text">
+                <div class="perspective-line">
+                    <p></p>
+                    <p>Meet the</p>
+                </div>
+                <div class="perspective-line">
+                    <p>Meet the</p>
+                    <p>People</p>
+                </div>
+                <div class="perspective-line">
+                    <p>People</p>
+                    <p>Behind the</p>
+                </div>
+                <div class="perspective-line">
+                    <p>Behind the</p>
+                    <p>Scenes</p>
+                </div>
+                <div class="perspective-line">
+                    <p>Scenes</p>
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="cm-gap"></div>
+
+            <div class="core-members-content">
+                <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum odit at saepe nisi. Illum, numquam.</h6>
+                <button class="button" onclick="location.href='#'" type="button"><span class="always-white">Meet</span></button>
+            </div>
         </div>
-    </div> -->
+    </div>
+
+    <footer>
+        <p>Find us on</p>
+        <a href=""><i class="fab fa-facebook"></i></a>
+        <a href=""><i class="fab fa-twitter"></i></a>
+        <a href=""><i class="fab fa-instagram"></i></a>
+        <a href=""><i class="fab fa-github"></i></a>
+        <p>Made with ❤ in GECT</p> 
+    </footer>
+
     <script src="Js/jquery.scrollie.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"
         integrity="sha512-/6TZODGjYL7M8qb7P6SflJB/nTGE79ed1RfJk3dfm/Ib6JwCT4+tOfrrseEHhxkIhwG8jCl+io6eaiWLS/UX1w=="
