team page basic

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
             <div class="core-members-content">
                 <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum odit at saepe nisi. Illum, numquam.</h6>
-                <button class="button" onclick="location.href='#'" type="button"><span class="always-white">Meet</span></button>
+                <button class="button" onclick="location.href='./Team/team.html'" type="button"><span class="always-white">Meet</span></button>
             </div>
         </div>
     </div>
