--- a/Team/team.html
+++ b/Team/team.html
@@ -6,34 +6,75 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Team</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="team.css" />
-   
+
 </head>
 
 <body>
+   <div class="header" style="color: aliceblue; text-align: center;">
+      <img src="../Images/2 ASTRAL.png" width="300px" alt="">
+      <h1 class="title-execom" style="margin-bottom: 2em; font-family: 'Poppins', sans-serif;">EXECOM</h1>
+   </div>
    <div class="container">
       <div class="card">
          <div class="content">
-            <h2> Name 1</h2>
-            <p> detsialasd fasdfasdfasdfasdfasd</p>
+            <h2> Captain America</h2>
+            <p> Avenger</p>
 
          </div>
-         <img
-            src="../Images/ironman.png"
-            alt="member" />
+         <img src="../Images/Cap.png" alt="member" />
       </div>
       <div class="card">
          <div class="content">
-            <h2> Name 1</h2>
-            <p> detsialasd fasdfasdfasdfasdfasd</p>
+            <h2> Iron man</h2>
+            <<p> Avenger</p>
 
          </div>
-         <img
-            src="../Images/ironman.png"
-            alt="member" />
+         <img src="../Images/ironman.png" alt="member" />
       </div>
- 
-    
+   </div>
+
+   <div style="min-height: 50px;"></div>
+   <div class="container">
+      <div class="card">
+         <div class="content">
+            <h2> Thor</h2>
+            <p> Avenger</p>
+
+         </div>
+         <img src="../Images/thor.png" alt="member" />
+      </div>
+      <div class="card">
+         <div class="content">
+            <h2> Dr. Strange</h2>
+            <p> Avenger</p>
+
+         </div>
+         <img src="../Images/Dr.png" alt="member" />
+      </div>
+   </div>
+
+   <div style="min-height: 50px;"></div>
+   <div class="container">
+      <div class="card">
+         <div class="content">
+            <h2> Hulk</h2>
+            <p> Avenger</p>
+
+         </div>
+         <img src="../Images/hulk.png" alt="member" />
+      </div>
+      <div class="card">
+         <div class="content">
+            <h2> Vision</h2>
+            <p> Avenger</p>
+
+         </div>
+         <img src="../Images/vision.png" alt="member" />
+      </div>
    </div>
 </body>
 
