--- a/Team/team.html
+++ b/Team/team.html
@@ -30,14 +30,14 @@
       <div class="card">
          <div class="content">
             <h2> Iron man</h2>
-            <<p> Avenger</p>
+            <p> Avenger</p>
 
          </div>
          <img src="../Images/ironman.png" alt="member" />
       </div>
    </div>
 
-   <div style="min-height: 50px;"></div>
+   <div class="gap" style="min-height: 50px;"></div>
    <div class="container">
       <div class="card">
          <div class="content">
@@ -57,7 +57,7 @@
       </div>
    </div>
 
-   <div style="min-height: 50px;"></div>
+   <div class="gap" style="min-height: 50px;"></div>
    <div class="container">
       <div class="card">
          <div class="content">
