--- a/Events/event.html
+++ b/Events/event.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="../Images/1ASTRAL.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
@@ -27,12 +28,9 @@
         <section class="card" data-aos="fade-right">
             <img src="https://i.ibb.co/VvC0vpN/paint-1.png" alt="" />
             <div>
-                <h3>Event One</h3>
+                <h3>NOVA</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
-                    enim laudantium, animi veniam libero eveniet culpa unde perferendis
-                    illo fugit corporis, voluptatibus totam dolorum, maiores magnam
-                    officia. Ab, delectus.
+                    A celebrated annual convention conducted by Astral Space Club GECT in collaboration with other space clubs of Kerala, NOVA has been a very popular and well-received event among the students and the space exploration community of Kerala alike
                 </p>
                 <a href="#" class="btn">Register</a>
             </div>
@@ -41,12 +39,9 @@
         <section class="card" data-aos="fade-left">
             <img src="https://i.ibb.co/VvC0vpN/paint-1.png" alt="" />
             <div>
-                <h3>Event Two</h3>
+                <h3>Nakshathra</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
-                    enim laudantium, animi veniam libero eveniet culpa unde perferendis
-                    illo fugit corporis, voluptatibus totam dolorum, maiores magnam
-                    officia. Ab, delectus.
+                    NAKSHATHRA was an enlightening evening which certainly could brighten up the night sky for many in a way never experienced before. Searching the night sky for some of the most prized and important celestial objects and planetary bodies have been one of the most cherished highlights of this evening.    
                 </p>
                 <a href="#" class="btn">Register</a>
             </div>
@@ -55,12 +50,9 @@
         <section class="card" data-aos="fade-right">
             <img src="https://i.ibb.co/VvC0vpN/paint-1.png" alt="" />
             <div>
-                <h3>Event Three</h3>
+                <h3>Hawking series</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
-                    enim laudantium, animi veniam libero eveniet culpa unde perferendis
-                    illo fugit corporis, voluptatibus totam dolorum, maiores magnam
-                    officia. Ab, delectus.
+                    Hawking series is a well-thought initiative by Astral Space Club GECT which aims to educate, instill interest and provide a platform for discussing, debating and learning through interactive lecture series characterized by the direct involvement of the students through presentation on sub-topics and subjects relating to the happening topic of the year in the field of space and technology    
                 </p>
                 <a href="#" class="btn">Register</a>
             </div>
@@ -69,12 +61,9 @@
         <section class="card" data-aos="fade-left">
             <img src="https://i.ibb.co/VvC0vpN/paint-1.png" alt="" />
             <div>
-                <h3>Event Four</h3>
+                <h3>Space Odyssey</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
-                    enim laudantium, animi veniam libero eveniet culpa unde perferendis
-                    illo fugit corporis, voluptatibus totam dolorum, maiores magnam
-                    officia. Ab, delectus.
+                    Space Odyssey was a very creative and innovative story-based treasure hunt through space and time and saw remarkable enthusiasm and vigor among it’s very inquisitive contestants. Through this treasure hunt, both the organizers and the explorers got to be experimental and let our creative juices flow. Do look out for this amazing treasure hunt, for it’s sure to return in the years to come!
                 </p>
                 <a href="#" class="btn">Register</a>
             </div>
@@ -83,12 +72,9 @@
         <section class="card" data-aos="fade-right">
             <img src="https://i.ibb.co/VvC0vpN/paint-1.png" alt="" />
             <div>
-                <h3>Event Five</h3>
+                <h3>Instagram Weekly Quiz</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
-                    enim laudantium, animi veniam libero eveniet culpa unde perferendis
-                    illo fugit corporis, voluptatibus totam dolorum, maiores magnam
-                    officia. Ab, delectus.
+                    With space exploration and research taking huge strides at a rapid rate, keeping up is of utmost necessity. The weekly Instagram quiz sessions conducted by Astral Space Club GECT every Sunday through it’s official Instagram handle was all about learning new concepts, absorbing snippets of knowledge and generally being relevant through the subtle process of quizzing and challenging oneself!
                 </p>
                 <a href="#" class="btn">Register</a>
             </div>
