--- a/Team/team.html
+++ b/Team/team.html
@@ -21,19 +21,18 @@
    <div class="container">
       <div class="card">
          <div class="content">
-            <h2> Captain America</h2>
-            <p> Avenger</p>
+            <h2>Mohammed Aslam</h2>
+            <p> Designation</p>
 
          </div>
-         <img src="../Images/Cap.png" alt="member" />
+         <img src="../Images/MASL.png" alt="member" />
       </div>
       <div class="card">
          <div class="content">
-            <h2> Iron man</h2>
-            <p> Avenger</p>
-
+            <h2>Ashwin Rajesh</h2>
+            <p> Designation</p>
          </div>
-         <img src="../Images/ironman.png" alt="member" />
+         <img src="../Images/ASW.png" alt="member" />
       </div>
    </div>
 
@@ -41,19 +40,19 @@
    <div class="container">
       <div class="card">
          <div class="content">
-            <h2> Thor</h2>
-            <p> Avenger</p>
+            <h2> Abhijith Valsan</h2>
+            <p> Designation</p>
 
          </div>
-         <img src="../Images/thor.png" alt="member" />
+         <img src="../Images/ABJ.png" alt="member" />
       </div>
       <div class="card">
          <div class="content">
-            <h2> Dr. Strange</h2>
-            <p> Avenger</p>
+            <h2> Jishnu Suresh</h2>
+            <p> Designation</p>
 
          </div>
-         <img src="../Images/Dr.png" alt="member" />
+         <img src="../Images/JS.png" alt="member" />
       </div>
    </div>
 
@@ -61,21 +60,82 @@
    <div class="container">
       <div class="card">
          <div class="content">
-            <h2> Hulk</h2>
-            <p> Avenger</p>
+            <h2> Navaneeth D</h2>
+            <p> Designation</p>
 
          </div>
-         <img src="../Images/hulk.png" alt="member" />
+         <img src="../Images/NAV.png" alt="member" />
       </div>
       <div class="card">
          <div class="content">
-            <h2> Vision</h2>
-            <p> Avenger</p>
+            <h2> Adityan Rajesh</h2>
+            <p> Designation</p>
 
          </div>
-         <img src="../Images/vision.png" alt="member" />
+         <img src="../Images/Ad.png" alt="member" />
       </div>
    </div>
+
+   <div class="gap" style="min-height: 50px;"></div>
+   <div class="container">
+      <div class="card">
+         <div class="content">
+            <h2> Sarath C</h2>
+            <p> Designation</p>
+
+         </div>
+         <img src="../Images/SAR.png" alt="member" />
+      </div>
+      <div class="card">
+         <div class="content">
+            <h2> Akshay Suresh</h2>
+            <p> Designation</p>
+
+         </div>
+         <img src="../Images/AKS.png" alt="member" />
+      </div>
+   </div>
+
+   <div class="gap" style="min-height: 50px;"></div>
+   <div class="container">
+      <div class="card">
+         <div class="content">
+            <h2> Geethu Krishna</h2>
+            <p> Designation</p>
+
+         </div>
+         <img src="../Images/GK.png" alt="member" />
+      </div>
+      <div class="card">
+         <div class="content">
+            <h2> Arunima Hari P </h2>
+            <p> Designation</p>
+
+         </div>
+         <img src="../Images/AH.png" alt="member" />
+      </div>
+   </div>
+
+   <div class="gap" style="min-height: 50px;"></div>
+   <div class="container">
+      <div class="card">
+         <div class="content">
+            <h2> Abhay Dev K V</h2>
+            <p> Designation</p>
+
+         </div>
+         <img src="../Images/ABH.png" alt="member" />
+      </div>
+      <div class="card">
+         <div class="content">
+            <h2> Aathiragouri S </h2>
+            <p> Designation</p>
+
+         </div>
+         <img src="../Images/AG.png" alt="member" />
+      </div>
+   </div>
+   
 </body>
 
 </html>
