--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="Images/1ASTRAL.png">
     <link href="https://fonts.googleapis.com/css?family=Barlow:400,500,700|Vidaloka" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 	<link rel="stylesheet" type="text/css" href="base.css" />
@@ -56,9 +57,8 @@
             data-aos-easing="ease-in-out">
             <h1>About</h1>
             <h6>
-                ipsum dolor sit amet consectetur adipisicing elit. Officia, earum neque. Quos magnam maxime
-                suscipit in culpa reprehenderit dolor ex? Deleniti adipisci beatae eos numquam magni, rem soluta
-                odio nostrum?
+            Astral Space Club GECT is a one of it’s kind club of GEC Thrissur exclusively dedicated to the space explorer in every Gecian.
+            We promise you of glorious and fun filled experiences that is sure to enhance your knowledge and learning about the universe and it’s possibilities. Hearty welcome to the official website of Astral Space Club GECT!
             </h6>
         </div>
         <div id="starry" data-aos="fade-in" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
@@ -93,9 +93,7 @@
                     data-aos-duration="1000" data-aos-easing="ease-in-out">
                     <h1>Mission</h1>
                     <h6>
-                        ipsum dolor sit amet consectetur adipisicing elit. Officia, earum neque. Quos magnam maxime
-                        suscipit in culpa reprehenderit dolor ex? Deleniti adipisci beatae eos numquam magni, rem soluta
-                        odio nostrum?
+                    To create curiosity and knowledge about science, space and astronomy among the students and the general public.
                     </h6>
                 </div>
                 <div class="mission-content-pic" data-aos="fade-in" data-aos-offset="200" data-aos-delay="50"
@@ -113,9 +111,7 @@
                     data-aos-duration="1000" data-aos-easing="ease-in-out">
                     <h1>Vision</h1>
                     <h6>
-                        ipsum dolor sit amet consectetur adipisicing elit. Officia, earum neque. Quos magnam maxime
-                        suscipit in culpa reprehenderit dolor ex? Deleniti adipisci beatae eos numquam magni, rem soluta
-                        odio nostrum?
+                    To be a platform for learning and discussion of science and space and cultivate talent in the field of space technology.
                     </h6>
                 </div>
 
@@ -147,19 +143,17 @@
                     <img src="Images/undraw_Outer_space_drqu.svg" alt="">
                 </div>
                 <div class="event-content" data-aos="fade-in" data-aos-duration="2000">
-                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit 
-                    provident aliquid rem, maxime reprehenderit debitis recusandae
-                    ducimus ipsam, animi vero quia autem voluptatum deleniti ut! Architecto 
-                    repellat error officiis doloremque?</h6>
+                    <h6>
+                        A celebrated annual convention conducted by Astral Space Club GECT in collaboration with other space clubs of Kerala, NOVA has been a very popular and well-received event among the students and the space exploration community of Kerala alike.
+                    </h6>
                 </div>
             </div>
             <div class="gap-1"></div>
             <div class="event-t">
                 <div class="event-content-t" data-aos="fade-in" data-aos-duration="2000">
-                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit 
-                    provident aliquid rem, maxime reprehenderit debitis recusandae
-                    ducimus ipsam, animi vero quia autem voluptatum deleniti ut! Architecto 
-                    repellat error officiis doloremque?</h6>
+                    <h6>
+                        NAKSHATHRA was an enlightening evening which certainly could brighten up the night sky for many in a way never experienced before. Searching the night sky for some of the most prized and important celestial objects and planetary bodies have been one of the most cherished highlights of this evening.
+                    </h6>
                 </div>
                 <div class="event-pic-t" data-aos="zoom-out-down" data-aos-duration="2000">
                     <img src="Images/undraw_To_the_stars_qhyy.svg" alt="">
@@ -171,19 +165,17 @@
                     <img src="Images/undraw_maker_launch_crhe.svg" alt="">
                 </div>
                 <div class="event-content" data-aos="fade-in" data-aos-duration="2000">
-                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit 
-                    provident aliquid rem, maxime reprehenderit debitis recusandae
-                    ducimus ipsam, animi vero quia autem voluptatum deleniti ut! Architecto 
-                    repellat error officiis doloremque?</h6>
+                    <h6>
+                        Hawking series is a well-thought initiative by Astral Space Club GECT which aims to educate, instill interest and provide a platform for discussing, debating and learning through interactive lecture series.
+                    </h6>
                 </div>
             </div>
             <div class="gap-1"></div>
             <div class="event-t">
                 <div class="event-content-t" data-aos="fade-in" data-aos-duration="2000">
-                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit 
-                    provident aliquid rem, maxime reprehenderit debitis recusandae
-                    ducimus ipsam, animi vero quia autem voluptatum deleniti ut! Architecto 
-                    repellat error officiis doloremque?</h6>
+                    <h6>
+                        Space Odyssey was a very creative and innovative story-based treasure hunt through space and time and saw remarkable enthusiasm and vigor among it’s very inquisitive contestants. 
+                    </h6>
                 </div>
                 <div class="event-pic-t" data-aos="zoom-out-down" data-aos-duration="2000">
                     <img src="Images/undraw_lost_online_wqob.svg" alt="">
@@ -229,7 +221,7 @@
             <div class="cm-gap"></div>
 
             <div class="core-members-content">
-                <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum odit at saepe nisi. Illum, numquam.</h6>
+                <h6>"Working together, tiny stars light the universe. That's the power of teamwork."<h6>
                 <button class="button" onclick="location.href='./Team/team.html'" type="button"><span class="always-white">Meet</span></button>
             </div>
         </div>
